gtk/gtktextview.c
@@ -5083,6 +5083,10 @@ _widget_to_text_window_coords (GtkTextView *text_view,
                                gint        *y)
 {
   GtkTextViewPrivate *priv = text_view->priv;
+  gint border_width = gtk_container_get_border_width (GTK_CONTAINER (text_view));
+
+  *x -= border_width;
+  *y -= border_width;
 
   if (priv->top_window)
     (*y) -= priv->top_window->requisition.height;
